--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,26 @@
+spring.application.name=spring-batch
+
+server.port=18888
+
+
+
+spring.datasource.batch.jdbc-url:jdbc:mysql://47.105.107.249:3306/demo?useUnicode=true&characterEncoding=UTF-8&useSSL=false
+spring.datasource.batch.username:root
+spring.datasource.batch.password:411324Ssuu
+spring.datasource.batch.driver-class-name: com.mysql.jdbc.Driver
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
