--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,16 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <java.mysql.version>8.0.16</java.mysql.version>
+        <mybatis.version>1.3.2</mybatis.version>
+        <common.lang3.version>3.7</common.lang3.version>
+        <guava.version>20.0</guava.version>
+        <jackson.version>2.11.2</jackson.version>
+        <slf4j.version>1.7.25</slf4j.version>
+        <fast.json.version>1.2.70</fast.json.version>
+        <common.io.version>2.5</common.io.version>
+        <javassist.version>3.12.1.GA</javassist.version>
+        <hikariCP.vesion>3.2.0</hikariCP.vesion>
     </properties>
 
     <dependencies>
@@ -40,6 +50,45 @@
             <artifactId>spring-batch-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>${hikariCP.vesion}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>${java.mysql.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.inject</groupId>
+            <artifactId>javax.inject</artifactId>
+            <version>1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.20</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
