--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,9 @@ server.port=18888
 spring.datasource.batch.jdbc-url:jdbc:mysql://47.105.107.249:3306/demo?useUnicode=true&characterEncoding=UTF-8&useSSL=false
 spring.datasource.batch.username:root
 spring.datasource.batch.password:411324Ssuu
-spring.datasource.batch.driver-class-name: com.mysql.jdbc.Driver
+spring.datasource.batch.driver-class-name: com.mysql.cj.jdbc.Driver
 
-
+##禁止项目启动时运行job
 spring.batch.job.enabled=false
 
 
